<resources>
    <string name="app_name">Cadastro de Gastos em Games</string>
    <string name="jogo_paladins" translatable="false">Paladins</string>
    <string name="jogo_csgo" translatable="false">Counter-Strike: Global Offensive</string>
    <string name="jogo_tf2" translatable="false">Team Fortress 2</string>
    <string name="txt_transacao">Transação</string>
    <string name="txt_valor">Valor</string>
    <string name="txt_jogos">Jogos</string>
    <string name="aviso">Aviso!</string>
    <string name="ok" translatable="false">OK!</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="confirmacao">Confirmação</string>
    <string name="nome_vazio">O nome da transação está vazio!</string>
    <string name="valor_vazio">O valor da transação está vazio!</string>
    <string name="txt_salvar">Salvar</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_novo">Novo</string>
    <string name="txt_exibir">Exibir informações</string>
    <string name="txt_deletar">Deletar</string>
    <string name="txt_sobre">Sobre</string>
    <string name="alterar_transacao">Alterar Transação</string>
    <string name="nova_transacao">Nova Transação</string>
    <string name="deseja_apagar">Deseja realmente apagar o item selecionado?</string>
    <string name="txt_jogo">Jogo</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="jogo_vazio">O nome do jogo está vazio!</string>
    <string name="jogo_usado">O jogo está sendo usado em uma transação e não pode ser deletado!</string>
    <string name="valor_invalido">O valor deve ser maior do que zero!</string>
    <string name="txt_sobre_info">Cadastro de gastos em games é um aplicativo para gerenciar transações que você realiza em seus jogos com mais faclidade.</string>
    <string name="txt_autor">Autor: Rodrigo Moretto</string>
    <string name="txt_ra">RA: 1634100</string>
    <string name="txt_info">Sobre o aplicativo</string>
    <string name="alterar_jogo">Alterar Jogo</string>
    <string name="salvo_sucesso">Salvo com sucesso!</string>
    <string name="preferencia_cor" translatable="false">br.utfpr.rodrigomoretto.trabalho_final.PREFERENCIAS_CORES</string>
    <string name="cor_fundo" translatable="false">COR_FUNDO</string>
    <string name="txt_azul">Azul</string>
    <string name="txt_verde">Verde</string>
    <string name="txt_vermelho">Vermelho</string>
    <string name="txt_alterar">Alterar</string>
    <string name="nome_jogo_usado">O nome do jogo já está sendo usado!</string>

    <plurals name="selecionado">
        <item quantity="one">%d selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>
</resources>
